# adc_nrf52dk_zephyr

./: CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
build_nrf52dk_nrf52832/: 7870.adc_sample.emProject  7870.adc_sample.emSession  CMakeCache.txt  build.emProject  build.ninja  cmake_install.cmake  rules.ninja  zephyr_modules.txt  zephyr_settings.txt
build_nrf52dk_nrf52832/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig  Kconfig.soc  Kconfig.soc.arch  Kconfig.soc.defconfig
build_nrf52dk_nrf52832/modules/canopennode/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/civetweb/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/cmsis/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/fatfs/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/libmetal/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/littlefs/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/loramac-node/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/lvgl/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/mbedtls/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/mcuboot/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/mcumgr/: cmake_install.cmake
build_nrf52dk_nrf52832/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_pass_final.cmd.dep  nrf52dk_nrf52832.dts.pre.d  nrf52dk_nrf52832.dts.pre.tmp  runners.yaml  zephyr.dts  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.elf  zephyr_prebuilt.map
src/: main.c
(+76 files in other folders)
